kubernetes/manifest/deploy-canary/canary-with-ingress/deploymentstable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloflask-stable
  labels:
    app: helloflask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloflask
  template:
    metadata:
      labels:
        app: helloflask
        tier: backend
        track: stable
    spec:
      # nodeSelector:
      #   service: video-ingest
      containers:
        - name: helloflask
          image: netomoura10/helloflask:v1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "200M"
              cpu: "100m"
            limits:
              memory: "300M"
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: helloflask
  labels:
    app: helloflask
spec:
  ports:
    - port: 5000 # the port that this service should serve on
      targetPort: 5000 #Container Port
      protocol: TCP
  selector:
    app: helloflask
    tier: backend
    track: stable
